fixing spacing on menu

--- a/burger.css
+++ b/burger.css
@@ -126,6 +126,5 @@ input,textarea {
 form{
 	color: black;
 	font-family: arial, sans-serif;
-	padding:10px;
+	padding:11px;
 }
-
